phpMyFAQ 2.8.20
Codename "Perdita"

CHANGELOG

This is a log of major user-visible changes in each phpMyFAQ release.

Version 2.8.20 - 2015-01

Version 2.8.19 - 2014-12-31
- fixed some minor bugs (Thorsten)

Version 2.8.18 - 2014-11-30
- added clickjacking prevention (Thorsten, Narendra Bhati)
- fixed some minor bugs (Thorsten)

Version 2.8.17 - 2014-11-05
- fixed typo in update script (Thorsten)

Version 2.8-16 - 2014-11-03
- fixed restore from backup (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.15 - 2014-10-02
- fixed broken installation (Thorsten)
- updated Farsi translation

Version 2.8.14 - 2014-10-01
- fixed installation compatibility with MySQL 5.1 and MySQL 5.5 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.13 - 2014-09-16
- fixed multiple security vulnerabilities (Nikhil Srivastava, Thorsten)
- backported full support for SQLite3 (Peter Kehl)
- updated Chinese (Traditional) translation (Barlos Lee)
- updated Farsi translation
- updated Italian translation
- updated Spanish translation
- fixed some minor bugs (Thorsten)

Version 2.8.12 - 2014-08-02
- updated Hebrew translation
- updated to Twitter OAuth v1.1 (Thorsten)
- updated bundled Symfony ClassLoader to version 2.5.1 (Thorsten)
- fixed RSS/Atom feed compatibility (Thorsten)

Version 2.8.11 - 2014-06-28
- updated German translation (Thorsten)
- updated Romanian translation
- updated Spanish translation
- fixed some minor bugs (Thorsten)

Version 2.8.10 - 2014-05-30
- dropped support for Internet Explorer 7 and 8 (Thorsten)
- updated Brazilian Portuguese translation (Joao Tafarelo)
- updated bundled TinyMCE to version 3.5.11 (Thorsten)
- updated bundled TCPDF library to version 6.0.078 (Thorsten)
- fixed some minor bugs (Thorsten)

Version 2.8.9 - 2014-04-28
- updated Thai translation
- fixed some minor bugs (Thorsten)

Version 2.8.8 - 2014-03-18
- improved API security (Thorsten)
- fixed search with Hebrew characters (Thorsten)