@@ -317,7 +317,7 @@ $PMF_LANG['ad_auth_fail'] = 'Nom d\'utilisateur ou mot de passe incorrect.';
 $PMF_LANG['ad_auth_sess'] = 'La session ID est dépassée.';
 $PMF_LANG['ad_config_edit'] = 'Editer configuration';
 $PMF_LANG['ad_config_save'] = 'Sauver configuration';
-$PMF_LANG['ad_config_reset'] = 'Reset';
+$PMF_LANG['ad_config_reset'] = 'Réinitialiser';
 $PMF_LANG['ad_config_saved'] = 'La configuration a bien été enregistrée.';
 $PMF_LANG['ad_menu_editconfig'] = 'Editer configuration';
 $PMF_LANG['ad_att_none'] = 'Pas de fichiers attachés';
@@ -643,8 +643,8 @@ $PMF_LANG['msgTransToolSureDeleteFile'] = 'Etes-vous sûr(e) de vouloir supprime
 $PMF_LANG['msgTransToolFileRemoved'] = 'Fichiers de langue supprimé avec succès';
 $PMF_LANG['msgTransToolErrorRemovingFile'] = 'Erreur en supprimant ce fichier de langue';
 $PMF_LANG['msgVariable'] = 'Variable';
-$PMF_LANG['msgCancel'] = 'Annulé';
-$PMF_LANG['msgSave'] = 'Sauvé';
+$PMF_LANG['msgCancel'] = 'Annuler';
+$PMF_LANG['msgSave'] = 'Sauvegarder';
 $PMF_LANG['msgSaving3Dots'] = 'enregistrement en cours ...';
 $PMF_LANG['msgRemoving3Dots'] = 'suppression en cours ...';
 $PMF_LANG['msgTransToolFileSaved'] = 'Fichier de langue enregistré avec succès';
@@ -667,7 +667,7 @@ $PMF_LANG['msgAttachmentNotFound'] = 'Le fichier que vous essayez de télécharg
 $PMF_LANG['ad_sess_noentry'] = 'Aucune entrée';
 $PMF_LANG['plmsgUserOnline']['0'] = '%d utilisateur(s) en ligne';
 $PMF_LANG['plmsgUserOnline']['1'] = '';
-$LANG_CONF['records.attachmentsPath'] = array(0 => "input", 1 => "Les chemins du fichiers seront enregistrés.<br /><small>Un chemin relatif est un dossier sans la racine du site</small>");
+$LANG_CONF['records.attachmentsPath'] = array(0 => 'input', 1 => 'Les chemins du fichiers seront enregistrés.<br /><small>Un chemin relatif est un dossier sans la racine du site</small>');
 $PMF_LANG['msgTransToolRemove'] = 'Supprimer';
 $PMF_LANG['msgTransToolLanguageNumberOfPlurals'] = 'Nombre de forme de pluriels';
 $PMF_LANG['msgTransToolLanguageOnePlural'] = 'Cette langue a seulement une forme de pluriel';
@@ -781,23 +781,23 @@ $PMF_LANG['msgTransToolLanguage'] = 'Langue';
 $PMF_LANG['msgTransToolActions'] = 'Actions';
 $PMF_LANG['msgTransToolWritable'] = 'Writable';
 $PMF_LANG['msgTranslateSubmit'] = 'Start translation...';
-$PMF_LANG['msgNewTranslationThanks'] = 'Thank you for your translation proposal!';
+$PMF_LANG['msgNewTranslationThanks'] = 'Merci pour votre proposition de traduction !';
 $PMF_LANG['ad_news_link_parent'] = 'Ce lien s\'ouvrira dans la fenêtre parent';
 $PMF_LANG['ad_groups'] = 'Groupes';
 $PMF_LANG['msgTagSearch'] = 'Entrées tagged';
 $PMF_LANG['ad_session_expiration'] = 'Le temps de votre expiration de session';
 $PMF_LANG['ad_user_active'] = 'actif';
-$PMF_LANG['ad_user_blocked'] = 'blocked';
-$PMF_LANG['ad_user_protected'] = 'protected';
+$PMF_LANG['ad_user_blocked'] = 'bloqué';
+$PMF_LANG['ad_user_protected'] = 'protégé';
 $PMF_LANG['ad_entry_intlink'] = 'Sélectionnez un FAQ  à insérer comme un lien ...';
 $PMF_LANG['ad_categ_paste2'] = 'Coller après';
 $PMF_LANG['ad_categ_remark_move'] = 'L\'échange de 2 catégories est seulement possible au même niveau.';
 $PMF_LANG['msgUsersOnline'] = '%d Invités and %d Inscrits';
-$PMF_LANG['ad_adminlog_del_older_30d'] = 'Delete immediately logs older than 30 days';
-$PMF_LANG['ad_adminlog_delete_success'] = 'Older logs successfully deleted.';
-$PMF_LANG['ad_adminlog_delete_failure'] = 'No logs deleted: an error occurred performing the request.';
+$PMF_LANG['ad_adminlog_del_older_30d'] = 'Supprimer les enregistrements de plus de 30 jours';
+$PMF_LANG['ad_adminlog_delete_success'] = 'Les enregistrements les plus anciens ont été supprimés avec succès.';
+$PMF_LANG['ad_adminlog_delete_failure'] = 'Aucun enregistrement effacé : une erreur est survenue lors de l\'opération.';
 $PMF_LANG['ad_quick_group'] = 'Ajouter un nouveau groupe';
-$PMF_LANG['msgNewTranslationHeader'] = 'Translation proposal';
+$PMF_LANG['msgNewTranslationHeader'] = 'Proposition de traduction';
 $PMF_LANG['msgNewTranslationAddon'] = 'Your proposal will not be published right away, but will be released by the administrator upon receipt. Required  fields are <strong>your Name</strong>, <strong>your email address</strong>, <strong>your headline translation</strong> and <strong>your faq translation</strong>. Please separate the keywords with space only.';
 $PMF_LANG['msgNewTransSourcePane'] = 'Volet source';
 $PMF_LANG['msgNewTranslationPane'] = 'Volet traduction';
@@ -861,7 +861,7 @@ $PMF_LANG['ad_menu_attachments'] = 'Pièces jointes';
 $PMF_LANG['ad_menu_attachment_admin'] = 'Administration de pièce jointe';
 $PMF_LANG['msgAttachmentsFilename'] = 'Nom de fichier';
 $PMF_LANG['msgAttachmentsFilesize'] = 'Poids du fichier';
-$PMF_LANG['msgAttachmentsMimeType'] = 'MIME Type';
+$PMF_LANG['msgAttachmentsMimeType'] = 'Type MIME';
 $PMF_LANG['msgAttachmentsWannaDelete'] = 'Êtes-vous sûr de vouloir supprimer cette pièce jointe?';
 $PMF_LANG['msgAttachmentsDeleted'] = 'Pièce jointe supprimé avec <strong>succès</strong>.';
 $PMF_LANG['ad_menu_reports'] = 'Rapports';
@@ -870,7 +870,7 @@ $PMF_LANG['ad_stat_report_category'] = 'Categorie';
 $PMF_LANG['ad_stat_report_sub_category'] = 'Sous-catégorie';
 $PMF_LANG['ad_stat_report_translations'] = 'Traductions';
 $PMF_LANG['ad_stat_report_language'] = 'Langue';
-$PMF_LANG['ad_stat_report_id'] = 'FAQ ID';
+$PMF_LANG['ad_stat_report_id'] = 'ID FAQ';
 $PMF_LANG['ad_stat_report_sticky'] = 'FAQ épinglée';
 $PMF_LANG['ad_stat_report_title'] = 'Question';
 $PMF_LANG['ad_stat_report_creation_date'] = 'Date';
@@ -883,19 +883,65 @@ $PMF_LANG['ad_stat_report_make_csv'] = 'Exporter à CSV';
 $PMF_LANG['msgRegistration'] = 'Inscription';
 $PMF_LANG['msgRegistrationCredentials'] = 'Pour vous inscrire s\'il vous plaît entrer votre nom, votre login et une adresse email valide!';
 $PMF_LANG['msgRegistrationNote'] = 'Après une inscription réussie, vous recevrez une réponse peu après que l\'administrateur a autorisé votre inscription.';
-$PMF_LANG['ad_entry_changelog_history'] = 'Historique changelog';
+$PMF_LANG['ad_entry_changelog_history'] = 'Historique des modifications';
 $LANG_CONF['socialnetworks.twitterConsumerSecret'] = array(0 => "input", 1 => "Twitter Consumer Secret");
 $LANG_CONF['socialnetworks.twitterAccessTokenKey'] = array(0 => "input", 1 => "Twitter Access Token Key");
-$LANG_CONF['socialnetworks.twitterAccessTokenSecret'] = array(0 => "input", 1 => "Twitter Access Token Secret");
-$LANG_CONF['socialnetworks.enableFacebookSupport'] = array(0 => "checkbox", 1 => "Facebook support (default: deactivated)");
-$LANG_CONF['security.ssoSupport'] = array(0 => "checkbox", 1 => "Single Sign On Support (default: deactivated)");
+$LANG_CONF['socialnetworks.twitterAccessTokenSecret'] = array(0 => 'input', 1 => 'Twitter Access Token Secret');
+$LANG_CONF['socialnetworks.enableFacebookSupport'] = array(0 => 'checkbox', 1 => 'Facebook support (default: deactivated)');
+$LANG_CONF['security.ssoSupport'] = array(0 => 'checkbox', 1 => 'Single Sign On Support (default: deactivated)');
 $PMF_LANG['securityControlCenter'] = 'Configuration de la sécurité';
-$PMF_LANG['ad_search_delsuc'] = 'The searchterm was successfully deleted.';
-$PMF_LANG['ad_search_delfail'] = 'The seachterm was not deleted.';
+$PMF_LANG['ad_search_delsuc'] = 'Le terme de recherche a été supprimé avec succès.';
+$PMF_LANG['ad_search_delfail'] = 'Le terme de recherche n\'a pas été supprimé.';
 $PMF_LANG['msg_about_faq'] = 'A propos de cette FAQ';
 $PMF_LANG['msgTableOfContent'] = 'Table des matières';
-$LANG_CONF['security.ssoLogoutRedirect'] = array(0 => "input", 1 => "Single Sign On logout redirect service URL");
-$LANG_CONF['main.dateFormat'] = array(0 => "input", 1 => "Format de date (défault: Y-m-d H:i)");
-$LANG_CONF['security.enableLoginOnly'] = array(0 => "checkbox", 1 => "Complete secured FAQ (default: deactivated)");
-$LANG_CONF['security.useSslOnly'] = array(0 => "checkbox", 1 => "FAQ with SSL only (default: deactivated)");
-$PMF_LANG["msgExportAllFaqs"] = "Générer PDF complet";
+$LANG_CONF['security.ssoLogoutRedirect'] = array(0 => 'input', 1 => 'Single Sign On logout redirect service URL');
+$LANG_CONF['main.dateFormat'] = array(0 => 'input', 1 => 'Format de date (défault: Y-m-d H:i)');
+$LANG_CONF['security.enableLoginOnly'] = array(0 => 'checkbox', 1 => 'Complete secured FAQ (default: deactivated)');
+$LANG_CONF['security.useSslOnly'] = array(0 => 'checkbox', 1 => 'FAQ with SSL only (default: deactivated)');
+$PMF_LANG['msgExportAllFaqs'] = 'Générer PDF complet';
+$PMF_LANG['msgShowMore'] = 'voir plus';
+$PMF_LANG['msgQuestionAnswered'] = 'Question répondu';
+$PMF_LANG['msgMessageQuestionAnswered'] = 'Your question at %s was answered. Please check it here:';
+$PMF_LANG['ad_stopwords_desc'] = 'Sélectionnez une langue pour ajouter ou modifier des stopwords.';
+$PMF_LANG['ad_visits_per_day'] = 'Visites par jour';
+$PMF_LANG['ad_instance_add'] = 'Ajouter une nouvelle instance multisite de phpMyFAQ';
+$PMF_LANG['ad_instance_error_notwritable'] = 'Le répertoire /multisite n\'a pas les droits en écriture.';
+$PMF_LANG['ad_instance_url'] = 'URL de l\'instance';
+$PMF_LANG['ad_instance_path'] = 'Path de l\'instance';
+$PMF_LANG['ad_instance_name'] = 'Nom de l\'instance';
+$PMF_LANG['ad_instance_email'] = 'Votre email administrateur';
+$PMF_LANG['ad_instance_admin'] = 'Admin login name';
+$PMF_LANG['ad_instance_password'] = 'Mot de passe admin';
+$PMF_LANG['ad_instance_hint'] = 'Attention: La création d\'une nouvelle instance met quelques secondes !';
+$PMF_LANG['ad_instance_button'] = 'Sauvegarder l\'instance';
+$PMF_LANG['ad_instance_error_cannotdelete'] = 'Impossible de supprimer l\'instance';
+$PMF_LANG['ad_instance_config'] = 'Configuration de l\'instance';
+$PMF_LANG['msgAboutThisNews'] = 'A propos';
+$PMF_LANG['msgAccessDenied'] = 'Accès refusé.';
+$LANG_CONF['records.randomSort'] = array(0 => 'checkbox', 1 => 'Sort FAQs randomly (default: deactivated)');
+$LANG_CONF['main.enableWysiwygEditorFrontend'] = array(0 => 'checkbox', 1 => 'Enable bundled WYSIWYG editor in frontend (default: disabled)');
+$LANG_CONF['main.enableGravatarSupport'] = array(0 => 'checkbox', 1 => 'Gravatar Support (default: disabled)');
+$PMF_LANG['ad_online_verification'] = 'Vérification en ligne';
+$PMF_LANG['ad_verification_button'] = 'Cliquez pour vérifier votre installation phpMyFAQ';
+$PMF_LANG['ad_verification_notokay'] = 'Votre version de phpMyFAQ a été changée localement:';
+$PMF_LANG['ad_verification_okay'] = 'Votre version phpMyFAQ a été vérifié avec succés';
+$PMF_LANG['cacheControlCenter'] = 'Configuration du cache';
+$PMF_LANG['ad_menu_searchfaqs'] = 'Recherche dans FAQs';
+$PMF_LANG['msg2answerFAQ'] = 'Répondu';
+$PMF_LANG['headerUserControlPanel'] = 'Paramètres utilisateur';
+$PMF_LANG['rememberMe'] = 'Se souvenir de moi';
+$PMF_LANG['ad_menu_instances'] = 'FAQ Multi-sites';
+$PMF_LANG['ad_record_inactive'] = 'FAQs inactive';
+$PMF_LANG['msgMode'] = 'Modus';
+$PMF_LANG['msgMaintenanceMode'] = 'FAQ en maintenance';
+$PMF_LANG['msgOnlineMode'] = 'FAQ en ligne';
+$LANG_CONF['cache.varnishEnable'] = array(0 => 'checkbox', 1 => 'Enable Varnish >=3.0 support<br><small>You will need varnish PECL extension</small>');
+$LANG_CONF['cache.varnishHost'] = array(0 => 'input', 1 => 'Varnish host');
+$LANG_CONF['cache.varnishPort'] = array(0 => 'input', 1 => 'Varnish port');
+$LANG_CONF['cache.varnishSecret'] = array(0 => 'input', 1 => 'Varnish secret');
+$LANG_CONF['cache.varnishTimeout'] = array(0 => 'input', 1 => 'Varnish timeout');
+$LANG_CONF['records.enableCloseQuestion'] = array(0 => 'checkbox', 1 => 'Close open question after answer?');
+$LANG_CONF['records.enableDeleteQuestion'] = array(0 => 'checkbox', 1 => 'Delete open question after answer?');
+$LANG_CONF['records.autosaveActive'] = array(0 => 'checkbox', 1 => 'Activate FAQ autosaving');
+$LANG_CONF['records.autosaveSecs'] = array(0 => 'input', 1 => 'Interval for autosaving in seconds, default 180');
+$LANG_CONF['main.maintenanceMode'] = array(0 => 'checkbox', 1 => 'Set FAQ in maintenance mode');
