@@ -6,6 +6,7 @@ CHANGELOG
 This is a log of major user-visible changes in each phpMyFAQ release.
 
 Version 2.8.20 - 2015-01
+- updated French translation (Olivier Binet)
 
 Version 2.8.19 - 2014-12-31
 - fixed some minor bugs (Thorsten)
